Update US Local Area Unemployment Statistics .ipynb

--- a/US Local Area Unemployment Statistics .ipynb
+++ b/US Local Area Unemployment Statistics .ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This data is provided by [MS Azure open Datasets](https://azure.microsoft.com/en-us/services/open-datasets/catalog/). Further information about the meanings and details of the dataset is given [here](https://download.bls.gov/pub/time.series/la/).\\\n",
+    "This data is provided by [MS Azure open Datasets](https://azure.microsoft.com/en-us/services/open-datasets/catalog/). Further information about the meanings and details of the dataset is given [here](https://download.bls.gov/pub/time.series/la/).\n",
     "This csv file is bigger than 2 GB, so that file cannot be provided. Please refer to the URL of the dataset."
    ]
   },
